--- a/public/html/index.html
+++ b/public/html/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <div class="phone">
     <h1>DaneeCloud</h1>
     <h2 class="subtitle">Upload & Download your files!</h2>
     <form action="/upload/" method="post", enctype="multipart/form-data">
@@ -22,12 +23,13 @@
         <button type="submit" class="upload" id="submit"><span class="material-icons">cloud_upload</span>&nbsp;Upload</button>
     </form>
     <form action="/dwnl" enctype="multipart/form-data">
-        <input type="text", id="downloadfile", name="downloadfile" placeholder="Your file name"></input>
+        <input type="text", id="downloadfile", name="downloadfile" placeholder="Your file name" required></input>
         <button type="submit" class="download"><span class="material-icons">cloud_download</span>&nbsp;Download</button>
     </form>
     <footer>
         <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
     
     </footer>
+</div>
 </body>
 </html>
